# warehouse-system

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  DEVELOPER_GUIDE.md  GIT_COMMANDS_REFERENCE.md  MEETING_ASSISTANT_INTEGRATION.md  ODOO_INTEGRATION_HANDOFF.md  PROJECT_MEMORY.md  README.md  ROADMAP.md  SESSION_HANDOFF.md  astro.config.mjs  create-sample-export.js  eslint.config.js  firestore.rules  fix_coordinates.py  fix_export_functions.py  package-lock.json  package.json  test-forms.js  verify-forms.js
.claude/: launch.json  settings.local.json
.github/workflows/: astro.yml  deploy.yml  desktop-installer.yml  gemini-developer.yml  gemini-reviewer.yml.
brandzo-addons/: .gitignore
docs/: ODOO_BACKEND_DEVELOPMENT_PLAN.md
odoo-proxy/: README.md
public/: Brandzo_Multi_Brand_Architecture_Odoo_Guide.html  Brandzo_Operational_Guide.html  brandzo-brand.css  brandzo-report.js  formUtils.js  manifest.webmanifest  المرجع-التشغيلي-الرسمي.html  تقرير(ERP).html  تقرير(التخزين).html  تقرير-إدارة-الجودة.html  تقرير-الانجاز.html  تقرير-التوظيف-والجدول-الزمني.html  تقرير-الدورة-المستندية-الكامل-2026.html  تقرير-الدورة-المستندية.html  تقرير-المقارنة-العالمية.html  تقرير-النظام-التفصيلي.html  تقرير-تحوير-مستودعات-155.html  تقرير-هيكل-الوظائف-والادوار.html  عمليات-مخزنية.html
scripts/: audit-portal.mjs  build-items-template.mjs  build-jobs-catalog.mjs  build-org.mjs  generate-ico.mjs  generate-icons.mjs  generate-vehicles-seed.mjs  update_barcode_scanner.py  verify_erp_complete.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+282 files in other folders)
