[package]
name = "brandzo-hub"
version = "1.0.0"
description = "Brandzo Hub — نظام إدارة مستودعات براندزو (قشرة سطح مكتب حول النظام السحابي)"
authors = ["Mohammed AlBarshi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
